@@ -102,6 +102,10 @@
 	[window setUserInteractionEnabled:YES];
 	[window setMultipleTouchEnabled:NO];
 	
+	// must be called before any othe call to the director
+	// FastDirector is faster, but consumes more battery
+//	[Director useFastDirector];
+	
 	// before creating any layer, set the landscape mode
 //	[[Director sharedDirector] setLandscape: YES];
 
